zarf/k8s/base/ingress/ingress-class.yaml
# IngressClass defines which controller handles Ingress resources
# Setting isDefaultClass: true means this controller handles all Ingress without explicit class
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
